--- a/data-and-code/431-projA-sample-proposal.qmd
+++ b/data-and-code/431-projA-sample-proposal.qmd
@@ -305,9 +305,9 @@ Here is where you'll place your research question for Analysis 2, which in my ca
 Here is where you'll place your research question for Analysis 2, which in my case involves comparing means of `unins_kids` in the 2019 report as compared to the 2014 report by CHR.
 
 
-# Reflection
+# Proposal Reflection
 
-Here is where you'll place your reflection.
+Here is where you'll place your reflection. I'll leave that to you.
 
 # Session Information
 
