--- a/data/lab2-template.qmd
+++ b/data/lab2-template.qmd
@@ -164,13 +164,9 @@ Write your response here.
 
 If you need a second paragraph, separate it from the first with a blank line.
 
+# AI Usage
 
-
-# AI Help
-
-If you decide to get help from a large language model (like ChatGPT) to help with your phrasing of ideas, or building code, OK, but you need to describe what you did in some detail here. If you use nothing outside of the spell-checker and code completion tools within RStudio, please write that here, as follows:
-
-In preparing this response, I made no use of AI outside of spell-check and code completion within RStudio.
+Write your AI Usage section here following the instructions.
 
 # Session Information
 
