--- a/data/431-first-r-template.qmd
+++ b/data/431-first-r-template.qmd
@@ -27,10 +27,10 @@ knitr::opts_chunk$set(comment = NA)
 ## Load Dr. Love's R script
 
 ```{r}
-## this assumes that the `431-Love.R` file from our web site
-## is loaded into your project directory
+## remove the ## below if the `Love-431.R` file from our web site
+## is loaded into your project directory and you want to include this script
 
-source("431-Love.R")
+## source("Love-431.R")
 ```
 
 
@@ -70,5 +70,6 @@ ggplot(data = iris, aes(x = Sepal.Length)) +
 ```{r session_info}
 xfun::session_info()
 ```
+
 
 
